# nnarch

./: .gitignore  README.md  pyproject.toml
nnarch/: __main__.py
nnarch/datasets/: cli.py  config.py  mnist.py
nnarch/mlp/: cli.py  errors.py  layers.py  model.py  train.py
nnarch/transformers/: cli.py
